# woodoku

./: .gitignore  Cargo.toml  LICENSE  README.md
woodoku-lib/: Cargo.toml
woodoku-lib/src/: lib.rs
woodoku-lib/src/data/: shapes.json
woodoku-py/: Cargo.toml  pyproject.toml
woodoku-py/src/: lib.rs
woodoku-py/woodoku-ai/: agent.py  environment.py
woodoku-ui/: Cargo.toml  index.html  styles.css
woodoku-ui/src/: main.rs
woodoku-ui/src/components/: board.rs  mod.rs  shape.rs  shapes.rs  slot.rs  terminal.rs
