[package]
name = "woodoku-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "woodoku_py"
crate-type = ["cdylib"]

[dependencies]
woodoku-lib = { path = "../woodoku-lib" }
anyhow.workspace = true
pyo3 = "0.19.0"
