[package]
name = "woodoku-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
woodoku-lib = { path = "../woodoku-lib" }
anyhow.workspace = true
log.workspace = true
gloo = "0.11.0"
gloo-storage = "0.3.0"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.67", features = ["Event", "HtmlInputElement", "InputEvent"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.0"
